syntax = "proto3";
option csharp_namespace = "TaskManager.Proto";
package TaskManagerGrpService;

service TaskManagerGRPCService{
	rpc CreateTask(TaskMessage) returns (TaskIdMessage);
	rpc ReadTask(TaskIdMessage) returns (TaskMessage);
	rpc UpdateTask(TaskMessageId) returns (TaskResponseEmpty);
	rpc DeleteTask(TaskIdMessage) returns (TaskResponseEmpty);
}
message TaskResponseEmpty {}

message TaskMessage{
	string name = 1;
	string description = 2;
	Status status = 3;
}
message TaskMessageId{
	string name = 1;
	string description = 2;
	Status status = 3;
	int32 id = 4;
}

message TaskIdMessage{
	int32 id = 1;
}

enum Status{
	OPEN = 0;
	IN_PROGRESS = 1;
	CLOSED = 2;
}